main menu z-index fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -382,7 +382,7 @@ button:focus {
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 1000;
+  z-index: 1100;
   top: 0;
   right: 0;
   background-color: #000000eb;
